<resources>
  <string name="app_name">TowerDefense</string>
  <string name="logcatKey">TowerDefense</string>
  <string name="start">start</string>
  <string name="settings">Settings</string>
  <string name="scores">Scores</string>
  <string name="tower_defense">Tower Defense</string>
  <string name="play">play</string>
  <string name="map_selection">Map Selection</string>
  <string name="back">back</string>
  <string name="map_name">Map Name</string>
  <string name="new_game">new game</string>
  <string name="resume_game">resume game</string>
  <string name="delete_game">delete game</string>
  <string name="volume">Volume</string>
  <string name="music">Music</string>
  <string name="sound_fx">Sound Fx</string>
  <string name="credits">Credits</string>
  <string name="amir_elrahep">Amir Elrahep</string>
  <string name="christopher_mee">Christopher Mee</string>
  <string name="cooper_wainczak">Cooper Wainczak</string>
  <string name="davin_procopio">Davin Procopio</string>
  <string name="edward_klimoshenko">Edward Klimoshenko</string>
  <string name="tyler_lafleur">Tyler Lafleur</string>
  <string name="high_scores">High Scores</string>
  <string name="towers">Towers</string>
  <string name="tower_info">Tower Info</string>
  <string name="remove">remove</string>
  <string name="exit">Exit</string>
  <string name="save">Save</string>
  <string name="resume">Resume</string>
  <string name="version">Version 2.0</string>
  <string name="option_1">Option 1</string>
  <string name="buy">Buy</string>
  <string name="option_2">option_2</string>
  <string name="upgrades">Upgrades</string>
  <string name="easy">easy</string>
  <string name="medium">medium</string>
  <string name="hard">hard</string>
  <string name="sell">sell</string>
  <string name="upgrade_name">Upgrade Name</string>
  <string name="upgrade_cost">Upgrade Cost</string>
  <string name="upgrade_name_2">Upgrade Name</string>
  <string name="upgrade_name_3">Upgrade Name</string>
  <string name="upgrade">upgrade</string>
  <string name="max">Max</string>
  <string name="pref_file_key">com.wsu.towerdefense.PREFERENCE_FILE_KEY</string>
  <string name="pref_key_music_volume">music_volume</string>
  <string name="pref_key_sfx_volume">sfx_volume</string>
  <string name="okay">okay</string>
  <string name="your_score">Your Score:</string>
  <string name="username">Username</string>
  <string name="todo">TODO</string>
  <string name="saved_game">Saved Game</string>
  <string name="load_error">Unable to load save file</string>
  <string name="no_saved_game">No saved game</string>
  <string name="save_info">Date: %1$s, Map: %2$s, Wave: %3$d, Difficulty: %4$s</string>
  <string name="sell_for">Sell for $%1$d</string>
  <string name="money">$%1$d</string>
  <string name="blank_username">No username entered</string>
  <string name="username_long">Username too long</string>
  <string name="fully_upgraded">Tower is fully upgraded in this category!</string>
  <string name="submit">submit</string>
    <string name="loading_scores">Loading Scores</string>
    <string name="price">Price</string>
    <string name="wsu_tower_defense">WSU Tower Defense</string>
</resources>