<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SettingsActivity">

    <ImageView
      android:id="@+id/imageView4"
      android:layout_width="731dp"
      android:layout_height="411dp"
      android:contentDescription="@string/todo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      app:srcCompat="@mipmap/menu_bg2" />

    <ImageButton
      android:id="@+id/btn_pause2"
      android:layout_width="45dp"
      android:layout_height="39dp"
      android:layout_marginBottom="26dp"
      android:layout_marginStart="20dp"
      android:background="@mipmap/back"
      android:backgroundTint="#fff"
      android:contentDescription="@string/todo"
      android:onClick="btnBackClicked"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:shadowColor="#000"
      android:shadowDx="5"
      android:shadowDy="5"
      android:shadowRadius="5"
      android:text="@string/volume"
      android:textColor="#fff"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="225dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingVertical="10dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/music"
          android:textColor="#fff"
          android:textSize="24sp" />

        <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingVertical="10dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/sound_fx"
          android:textColor="#fff"
          android:textSize="24sp"
          app:layout_column="0"
          app:layout_row="1" />

        <SeekBar
          android:id="@+id/sb_soundFx"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:progressTint="#FFFFFF"
          android:thumbTint="#FFFFFF"
          app:layout_column="1"
          app:layout_row="1" />

        <SeekBar
          android:id="@+id/sb_music"
          android:layout_width="150dp"
          android:layout_height="50dp"
          android:progressTint="#FFFFFF"
          android:thumbTint="#FFFFFF"
          app:layout_column="1"
          app:layout_row="0" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:shadowColor="#000"
      android:shadowDx="5"
      android:shadowDy="5"
      android:shadowRadius="5"
      android:text="@string/credits"
      android:textColor="#fff"
      android:textSize="36sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/gridLayout" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="150dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="150dp"
        app:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
          android:id="@+id/textView18"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="10dp"
          android:paddingVertical="5dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/amir_elrahep"
          android:textColor="#fff"
          android:textSize="18sp" />

        <TextView
          android:id="@+id/textView22"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="10dp"
          android:paddingVertical="5dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/edward_klimoshenko"
          android:textColor="#fff"
          android:textSize="18sp" />

        <TextView
          android:id="@+id/textView20"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="10dp"
          android:paddingVertical="5dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/tyler_lafleur"
          android:textColor="#fff"
          android:textSize="18sp" />
        <TextView
          android:id="@+id/textView19"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="10dp"
          android:paddingVertical="5dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/davin_procopio"
          android:textColor="#fff"
          android:textSize="18sp" />
        <TextView
          android:id="@+id/textView21"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingHorizontal="10dp"
          android:paddingVertical="5dp"
          android:shadowColor="#000"
          android:shadowDx="5"
          android:shadowDy="5"
          android:shadowRadius="5"
          android:text="@string/cooper_wainczak"
          android:textColor="#fff"
          android:textSize="18sp" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>