<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pause_menu_csl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/in_game_background">

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/exit"
        android:textSize="18sp"
        android:onClick="btnExitOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btn_resume"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/resume"
        android:textSize="18sp"
        android:onClick="btnResumeOnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187"
        app:layout_constraintWidth_percent="0.33" />

    <Button
        android:id="@+id/btn_pause_settings"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#009688"
        android:text="@string/settings"
        android:textSize="18sp"
        android:onClick="btnPauseSettingsOnClick"
        app:icon="@mipmap/settings"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>