<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.GameSelectionActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="731dp"
        android:layout_height="411dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/main_menu_background" />

    <ImageButton
        android:id="@+id/btn_pause5"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/back"
        android:backgroundTint="#009688"
        android:contentDescription="@string/todo"
        android:onClick="btnBackClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_pause4"
        android:layout_width="45dp"
        android:layout_height="39dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@mipmap/settings"
        android:backgroundTint="#009688"
        android:contentDescription="@string/todo"
        android:onClick="btnSettingsClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/newGame"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="btnNewGameClicked"
        android:text="@string/new_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/resumeGame"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="btnResumeGameClicked"
        android:text="@string/resume_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteGame"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:onClick="btnDeleteGameClicked"
        android:text="@string/delete_game"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>